--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body class="container-fluid">
     <h1>UI-Developer</h1>
-    <img src="public/images/developer.jpeg" height="300" width="300">
+    <img src="public/images/Black and  White Gradient Personal LinkedIn Banner.png" height="300" width="300">
     <p>My Skills: HTML, CSS, Bootstrap</p>
 </body>
 </html>
