--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
 </head>
 <body class="container-fluid">
-    <h1>UI-Developer</h1>
-    <img src="public/images/Black and  White Gradient Personal LinkedIn Banner.png" height="300" width="300">
-    <p>My Skills: HTML, CSS, Bootstrap</p>
+    <button class="btn btn-primary"><a href="./bmi.html">BMI Calculator</a></button>
 </body>
 </html>
