Added the hotel registrationfrom and to do list

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
 </head>
 <body class="container-fluid">
-    <button class="btn btn-primary"><a href="./bmi.html">BMI Calculator</a></button>
+    <button class="btn btn-primary me-2"><a href="./bmi.html">BMI Calculator</a></button>
+    <button class="btn btn-primary me-2"><a href="./to-do-list.html">TO DO List</a></button>
+    <button class="btn btn-primary me-2"><a href="./hotel.html">Hotel Registration Form</a></button>
 </body>
 </html>
