--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
+    <style>
+        a{
+            text-decoration: none;
+            color: white;
+        }
+    </style>
 </head>
-<body class="container-fluid">
+<body class="container-fluid mt-4 ">
     <button class="btn btn-primary me-2"><a href="./bmi.html">BMI Calculator</a></button>
     <button class="btn btn-primary me-2"><a href="./to-do-list.html">TO DO List</a></button>
     <button class="btn btn-primary me-2"><a href="./hotel.html">Hotel Registration Form</a></button>
